--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav .fa-solid {
 
     .nav-links {
         position: fixed;
-        background: #f44336;
+        background: #181717;
         height: 100vh;
         width: 200px;
         top: 0;
