--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ nav .fa-solid {
 .footer {
     width: 100%;
     text-align: center;
-    padding: 30px 0;
+    padding-bottom: 0px;
 }
 
 .footer h4 {
@@ -638,11 +638,6 @@ nav .fa-solid {
     box-sizing: border-box;
 }
 
-.gpu-grid{
-    height: 100vh;
-    width: 100%;
-}
 .gpu-grid2{
-    padding-top: 9%;
-    padding-left: 9.5%;
+    padding-left: 9%;
 }
