--- a/style.css
+++ b/style.css
@@ -407,7 +407,8 @@ nav .fa-solid {
     margin-top: 20px;
     font-weight: 600;
     color: white;
-    padding-top: 2.7%;
+    font-size: large;
+    padding-top: 3%;
     padding-bottom: .5%;
     
 }
@@ -656,4 +657,13 @@ nav .fa-solid {
 
 .gpu-grid2 {
     padding-left: 9%;
+}
+
+.new-price{
+    color: red;
+    margin-top: -5%;
+}
+
+.old-price{
+    font-size: small;
 }
