--- a/style.css
+++ b/style.css
@@ -391,8 +391,17 @@ nav .fa-solid {
 }
 
 .card:hover{
-    zoom: 101.25%;
+    zoom: 101.75%;
     box-shadow: #000000 .5px 1px;
+}
+
+.product-cards{
+    color: black;
+    text-decoration: none;
+}
+
+.product-page-header{
+    background-color: #000000;
 }
 
 
