--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ nav .fa-solid {
     .header {
         min-height: 50vh;
         width: 100%;
-        background-image: url(./assets/images/banner.png);
+        background-image: url(./assets/images/banner.jpg);
         background-position: center;
         background-size: cover;
         position: relative;
