--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: url(./assets/images/banner.png);
+    background-image: url(./assets/images/banner.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
