--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@ nav .fa-solid {
 .cta {
     margin: 100px auto;
     width: 80%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./assets/images/banner2.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./assets/images/banner.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
