--- a/style.css
+++ b/style.css
@@ -462,7 +462,7 @@ nav .fa-solid {
 .sub-header {
     height: 30vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(./assets/images/banner.png);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(./assets/images/banner.jpg);
     background-position: center;
     background-size: cover;
     text-align: center;
